@@ -57,19 +57,19 @@ class ApiWatch extends ApiBase {
 		if ( $params['unwatch'] ) {
 			$res['unwatched'] = '';
 			$res['message'] = $this->msg( 'removedwatchtext', $title->getPrefixedText() )->title( $title )->parseAsBlock();
-			$success = UnwatchAction::doUnwatch( $title, $user );
+			$status = UnwatchAction::doUnwatch( $title, $user );
 		} else {
 			$res['watched'] = '';
 			$res['message'] = $this->msg( 'addedwatchtext', $title->getPrefixedText() )->title( $title )->parseAsBlock();
-			$success = WatchAction::doWatch( $title, $user );
+			$status = WatchAction::doWatch( $title, $user );
 		}
 
 		if ( !is_null( $oldLang ) ) {
 			$this->getContext()->setLanguage( $oldLang ); // Reset language to $oldLang
 		}
 
-		if ( !$success ) {
-			$this->dieUsageMsg( 'hookaborted' );
+		if ( !$status->isOK() ) {
+			$this->dieStatus( $status );
 		}
 		$this->getResult()->addValue( null, $this->getModuleName(), $res );
 	}
